Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117891

[REG 6.5.2 → 6.5.3] Unable to determine callable overload with QVariantMap

XMLWordPrintable

    • 8c2ea501f (dev), a8ab23b67 (6.6), dd7a8758d (6.5), 1f19f6f10 (tqtc/lts-6.2)

      The attached example runs into

      qrc:/breakitbaby/Main.qml:12: Error: Unable to determine callable overload.  Candidates are:
          
          
      

      It works if the signature contains i.e. int instead of a QVariantMap. It works if you don't wrap FooBase, but FooImpl for qml.

      Although the title is similar, it doesn't seem to be related to QTBUG-117675.

        1. breakitbaby.tgz
          1 kB
          Cajus Pollmeier
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fabiankosmale Fabian Kosmale
            cajus Cajus Pollmeier
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes