tests/auto/qml/qqmlecmascript/tst_qqmlecmascript.cpp
@@ -424,6 +424,8 @@ private slots:
     void resetGadget();
     void assignListPropertyByIndexOnGadget();
 
+    void methodCallOnDerivedSingleton();
+
 private:
 //    static void propertyVarWeakRefCallback(v8::Persistent<v8::Value> object, void* parameter);
     static void verifyContextLifetime(const QQmlRefPointer<QQmlContextData> &ctxt);
@@ -10490,6 +10492,18 @@ void tst_qqmlecmascript::assignListPropertyByIndexOnGadget()
     QCOMPARE(gadget.gadgetStringList(), expected);
     QCOMPARE(gadget.gadgetVariantList(), variants);
     QCOMPARE(object->qobjectStringList(), expected);
+}
+
+void tst_qqmlecmascript::methodCallOnDerivedSingleton()
+{
+    QQmlEngine engine;
+    QQmlComponent c(&engine, testFile("methodCallOnDerivedSingleton.qml"));
+    QVERIFY2(c.isReady(), qPrintable(c.errorString()));
+    QScopedPointer<QObject> o(c.create());
+    QVERIFY(o);
+    auto singleton = engine.singletonInstance<SingletonBase *>("Qt.test", "SingletonInheritanceTest");
+    QVERIFY(singleton);
+    QVERIFY(singleton->m_okay);
 }
 
 QTEST_MAIN(tst_qqmlecmascript)
